# Tech_News_Scrapper

./: .env.example  .gitignore  GUI_DIRECTORY_STRUCTURE.md  LICENSE  MIGRATION_VERIFICATION_REPORT.md  PROJECT_DOCUMENTATION.md  PYQT6_MIGRATION_GUIDE.md  PYSIDE6_MIGRATION_STRATEGY.md  README.md  VERIFICATION_REPORT.md  architecture_final.md  architecture_update.md  cli.py  config.yaml  deploy_resilience.py  diagnose_window.py  fix.py  fix_app_qt_monitor.py  fix_content_viewer.py  fix_overlay.py  live_feed.db  main.py  patch_mock.py  requirements.txt  run_qt.py  test_feed.py  test_qt_window.py  update_overlay_visualizer.py
api/: __init__.py  events.py  main.py
config/: categories.yaml  config.py  industries.yaml  news_sources.json  resilience.yaml  settings.py  storage_config.json
data/: custom_sources.json  tech_news.db  tech_news_ai.json
discovered_sources/: discovered_sources.json
docs/: FIX_SUMMARY.md  ISSUES_AND_FIXES.md
gui/: CRITICAL_SEARCH_PATCH.py  FIXES_RESULTS_SECTION.py  INTEGRATION_GUIDE.py  LIVE_DASHBOARD_SUMMARY.md  LIVE_DASHBOARD_TOGGLE_SYSTEM.py  REVISED_LAYOUT_GUIDE.py  SEARCH_FIXES.py  __init__.py  app.py  app.py.bak  components.py  config_manager.py  developer_dashboard.py  enhancement_widgets.py  event_manager.py  live_dashboard.py  live_dashboard_part2.py  mode_manager.py  optimized_results.py  security.py  theme.py  user_interface.py
gui_qt/: README.md  __init__.py  app_qt.py  app_qt_migrated.py  config_manager.py  controller.py  developer_dashboard.py  event_manager.py  main_window.py  mode_manager.py  security.py  theme.py
misc/: ARCHITECTURE.md  CODEBASE_ANALYSIS_REPORT.md  GUI_ISSUES_AND_FIXES.md  HYBRID_MIGRATION_PLAN.md  HYBRID_QUICK_START.md  HYBRID_STATUS.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PYTHON_PERFORMANCE_GUIDE.md  TECHNICAL_DOCUMENTATION.md  techcrunch_sample.html  test_live_feed.db  (+5 more)
src/bypass/: Cargo.toml  DOCUMENTATION.md  Disposable_browser.rs  Web_traffic_analyzer.py  __init__.py  anti_bot.py  browser_engine.py  bypass_metrics.py  content_platform_bypass.py  lib.rs  medium_bypass_strategy.py  paywall.py  proxy_engine.py  proxy_manager.py  pyproject.toml  quantum_bypass.py  rust_md.txt  smart_proxy_router.py  stealth.py  stealth_browser_bypass.py  tls_client.py
(+224 files in other folders)
